Fixed login menu to align center and height to avoid cropping.

--- a/style.css
+++ b/style.css
@@ -105,6 +105,14 @@ section {
 	display: inline;
 }
 
+#log_in_links li:after {
+    content: "|";
+}
+
+#log_in_links li:last-child:after {
+    content: "";
+}
+
 #log_in_links a:visited {
 	color: pink;
 }
@@ -112,6 +120,7 @@ section {
 #log_in_links a{
 	color: #ff944d;
 	padding: 3px;
+    display: inline-block;
 	text-decoration: none;
 	  transition-property: background;
 	  transition-duration: 2s;
@@ -403,32 +412,33 @@ aside div {
     }
     
     #loginmenu {
-    float: left;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-    margin: 10px;
+        float: left;
+        width: 100%;
+        height: 30px;
+        overflow: hidden;
+        position: relative;
     }
     
     #loginmenu ol {
-    clear: left;
-    float: left;
-    list-style:none;
-    margin:0;
-    padding:0;
-    position:relative;
-    left:50%;
-    text-align:center;
+        clear: left;
+        float: left;
+        list-style:none;
+        margin:0;
+        padding:0;
+        position:relative;
+        left:50%;
+        text-align:center;
         
     }
     
-    #log_in_links {
-	display: block;
-    text-align: center;
-	position: relative;
-    list-style:none;
-    float: left;
-    right:50%;
+    #log_in_links li {
+        display: block;
+        float: left;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        right: 50%
     }
     
     section {
